@@ -22,6 +22,7 @@ Shawn Hovoer
 Yann E. Morin
 Fabrice Fontaine
 Ingo Koinzer
+Elijah Shaw-Rutschman
 
 Guidelines for authors:
 
