@@ -11,6 +11,7 @@ if (WITH_STATIC)
   message(STATUS "If you are using the static library build, please keep in mind (and inform yourself of the implications) that liblo is licensed with LGPL v2.1+.")
 endif()
 
+include(CheckFunctionExists)
 include(CheckIncludeFiles)
 include(CheckSymbolExists)
 include(CheckLibraryExists)
@@ -216,6 +217,30 @@ if(THREADING)
 else()
     set(THREADS_INCLUDE
       "/* lo/lo_serverthread.h unavailable (THREADING=OFF) */")
+endif()
+
+# Check if we need -lrt to get clock_gettime on Linux/Darwin
+CHECK_LIBRARY_EXISTS(rt clock_gettime "time.h" HAVE_CLOCK_GETTIME)
+if (HAVE_CLOCK_GETTIME)
+  target_link_libraries(${LIBRARY_SHARED} "rt")
+  if (WITH_STATIC)
+    target_link_libraries(${LIBRARY_STATIC} "rt")
+  endif()
+else()
+   set(CMAKE_EXTRA_INCLUDE_FILES time.h)
+   CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
+   SET(CMAKE_EXTRA_INCLUDE_FILES)
+   if (NOT HAVE_CLOCK_GETTIME)
+     # might also be in libc
+     check_library_exists(c clock_gettime "" HAVE_CLOCK_GETTIME)
+   endif()
+endif()
+if(HAVE_CLOCK_GETTIME)
+  try_compile(HAVE_CLOCK_REALTIME ${CMAKE_CURRENT_BINARY_DIR}
+      SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/test-clock-realtime.c")
+    if(HAVE_CLOCK_REALTIME)
+      add_definitions(-DHAVE_CLOCK_REALTIME)
+    endif()
 endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
